implementación de gráficos de panel para ventas semanales y ventas por categoría.

--- a/frontend/web/templates/base.html
+++ b/frontend/web/templates/base.html
@@ -11,6 +11,8 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <!-- Microsoft Fluent UI Web Components -->
     <script type="module" src="https://unpkg.com/@fluentui/web-components"></script>
+    <!-- Chart.js -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     {% load static %}
     <link href="{% static 'css/fluent.css' %}" rel="stylesheet">
 </head>
