--- a/frontend/web/templates/base.html
+++ b/frontend/web/templates/base.html
@@ -62,7 +62,7 @@
                             <i class='bx bx-dollar-circle me-1'></i>Caja
                         </a>
                     </li>
-                    {% if request.session.rol == 'ADMIN' %}
+                    {% if request.session.rol == 'ADMIN' or request.session.rol == 'SUPERADMIN' %}
                     <li class="nav-item">
                         <a class="nav-link {% if 'usuarios' in request.path %}active{% endif %}" href="{% url 'lista_usuarios' %}">
                             <i class='bx bx-cog me-1'></i>Administración
